--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ nav ul{
 }
 
 .box:hover{
-    background-color: blueviolet;
+    background-color: rgb(241, 236, 247);
 }
 
 .gameInfo{
@@ -53,4 +53,20 @@ nav ul{
 
 .imgbox img{
     display: none;
+}
+
+.br-0{
+    border-right: 0;
+}
+
+.bl-0{
+    border-left: 0;
+}
+
+.bt-0{
+    border-top: 0;
+}
+
+.bb-0{
+    border-bottom: 0;
 }
